fix text overflow

--- a/src/styles.css
+++ b/src/styles.css
@@ -68,6 +68,7 @@ body {
     border-right: solid 1px black;
     border-radius: 25px;
     gap: 2rem;
+    max-width: 250px;
 }
 
 .sidebar-section .logo {
@@ -132,7 +133,7 @@ body {
     border-radius: 20px;
     font-size: 20px;
     background-color: white;
-    gap: 0.5rem;
+    gap: 0.5rem;        
 }
 
 .projects-cont .card:hover {
@@ -143,6 +144,9 @@ body {
 
 .projects-cont .title {
     font-size: 30px;
+    overflow: hidden;  
+    text-overflow: ellipsis;
+    display: inline-block;
 }
 
 /* Tasks Styles*/
@@ -170,6 +174,7 @@ body {
     font-size: 20px;
     gap: 1rem;
     flex: 1;
+    min-width: 0;
 }
 
 .tasks-cont .card {
@@ -181,14 +186,25 @@ body {
     box-shadow: 0 2px 5px 0 rgba(144, 144, 144, 0.249);
 }
 
+.tasks-cont .card .title {
+    font-size: 30px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: block;
+}
+
+.tasks-cont .card p {
+    word-wrap: break-word;
+    overflow-wrap: break-word;
+    white-space: normal;
+    display: block;
+}
+
 .icons {
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
-}
-
-.tasks-cont .title {
-    font-size: 30px;
 }
 
 .tasks-cont .proj-name {
@@ -353,4 +369,31 @@ input:focus, textarea:focus {
 .urg:hover, .urg.active {
     background-color: rgb(255, 53, 53);
     color: var(--mainBg);
+}
+
+#sidebarProjectsList {
+    /* background-color: red; */
+    font-size: 16px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    gap: 0.2rem;
+    margin-left: 2rem;
+}
+
+#sidebarProjectsList button {
+    padding: 0.1rem 1rem;
+    text-align: left;
+    border-radius: 10px;
+    width: 100%;
+    overflow: hidden;      
+    white-space: nowrap;   
+    text-overflow: ellipsis;
+    display: inline-block;
+    box-sizing: border-box;
+}
+
+#sidebarProjectsList button:hover {
+    background-color: #D9D2BF;
 }
